--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
 				<div class="col-md-4">
 					<div class="contact-info">
 						<div>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they</div>
-						<p><span class="icon fa fa-mobile"></span>+8907681234</p>
-						<p><span class="icon fa fa-envelope"></span>email@gmail.com</p>
-						<p><span class="icon fa fa-location-arrow"></span>98, New York City , New York</p>
+						<p><span class="icon fa fa-mobile"></span>**********</p>
+						<p><span class="icon fa fa-envelope"></span>xyz@gmail.com</p>
+						<p><span class="icon fa fa-location-arrow"></span>VIT, Vellore</p>
 					</div>
 				</div>
 				<div class="col-md-8">
@@ -157,7 +157,7 @@
 	</section>
 
 	<footer>
-		<p class="center">Copyright &copy;<span class="primary">SPARK</span> 2017. All Rights Reserved.</p>
+		<p class="center">Copyright &copy;<span class="primary">IEI</span> 2017. All Rights Reserved.</p>
 	</footer>
 
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
