--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<div class="services-inner-content">
 							<p class="icon"><i class="fa fa-bars"></i></p>
 							<h3 class="service-title">Web Design</h3>
-							<p class="service-content">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right. A small river named Duden flows by their place 
+							<p class="service-content">Connect with us if you are willing to learn Web Development in much effective way. We will provide you various courses where you can excel yourself. 
 					</div>
 				</div>
 			</div>
