--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						<img src="images/project3.jpg">
 						<div class="project-inner">
 							<h3 class="project-title primary">Project1</h3>
-							<p class="project-desc">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they</p>
+							<p class="project-desc">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
 						</div>
 					</div>
 				</div>
@@ -110,7 +110,7 @@
 						<img src="images/project4.jpg">
 						<div class="project-inner">
 							<h3 class="project-title primary">Project2</h3>
-							<p class="project-desc">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they</p>
+							<p class="project-desc">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
 						</div>
 					</div>
 				</div>
@@ -120,7 +120,7 @@
 						<img src="images/project1.jpg">
 						<div class="project-inner">
 							<h3 class="project-title primary">Project3</h3>
-							<p class="project-desc">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they</p>
+							<p class="project-desc">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
 						</div>
 					</div>
 				</div>
