--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 					<div class="collapse" id="menu">
 						<ul class="transparent-bg center">
 							<li><a href="#">Home</a></li>
-							<li><a href="#">Services</a></li>
-							<li><a href="#">Works</a></li>
+							<li><a href="#">About</a></li>
+							<li><a href="#">Projects</a></li>
 							<li><a href="#">Contact</a></li>
 						</ul>
 					</div>
